--- a/main.html
+++ b/main.html
@@ -102,13 +102,13 @@
                             <form class="card-body">
                                 <fieldset class="fieldset">
                                     <label class="fieldset-label">Agent Number</label>
-                                    <input id="Account-number" type="number" class="input"
+                                    <input value="12764980585" id="Account-number" type="number" class="input"
                                         placeholder="Enter 11 digit number" required />
                                     <label class="fieldset-label">Amount</label>
-                                    <input id="amount" type="number" class="input"
+                                    <input id="cashout-amount" type="number" class="input"
                                         placeholder="Enter amount to withdraw" required />
                                     <label class="fieldset-label">PIN Number</label>
-                                    <input id="pin" type="text" class="input" placeholder="Enter 4 digit number"
+                                    <input value="1234" id="cashout-pin" type="text" class="input" placeholder="Enter 4 digit number"
                                         required />
                                     <div><a class="link link-hover">Forgot password?</a></div>
                                     <button id="cash-out" class="btn btn-neutral bg-blue-800 border-none mt-4">Withdraw
@@ -124,6 +124,7 @@
     <!-- script link -->
     <script src="./js/toggol.js"></script>
     <script src="./js/addmoney.js"></script>
+    <script src="./js/cashout.js"></script>
 
 </body>
 
